# linera-nft-mint

./: .env.linera.example  .env.local.example  .gitignore  LINERA_DEPLOYMENT.md  README.md  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/mint/: route.ts
app/components/: MintComponent.tsx  NFTCreator.tsx  NFTMarket.tsx  PredictionMarket.tsx  WalletProvider.tsx
app/components/ui/: tabs.tsx
app/lib/: dynamic-signer.ts
backend/: .env.example  package.json  server.js
contract/: Cargo.toml  README.md
contract/src/: lib.rs
